fixing cut off on mobile

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -293,17 +293,6 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
   margin: 0 auto;
 }
 
-.infoSec {
-  /* text-align: center; */
-  display: none;
-  margin: 0 auto;
-  color: #000;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12pt;
-  font-weight: 300;
-  /* padding: 20px 26px; */
-}
-
 /*  LUMA */
 
 .tools-container-main {
@@ -425,6 +414,18 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
     padding: 0;
   }
 
+  .infoSec {
+    /* text-align: center; */
+    display: none;
+    margin: 0 auto;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12pt;
+    font-weight: 300;
+    padding-top: 100px;
+    /* padding: 20px 26px; */
+  }
+
   .project-container {
     padding-top: 40px;
     padding-left: 0px !important;
@@ -508,6 +509,18 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
     padding: 0;
   }
 
+  .infoSec {
+    /* text-align: center; */
+    display: none;
+    margin: 0 auto;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12pt;
+    font-weight: 300;
+    padding-top: 80px;
+    /* padding: 20px 26px; */
+  }
+
   .project-container {
     padding-top: 40px;
     padding-left: 0px !important;
@@ -585,6 +598,18 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
     padding: 0;
   }
 
+  .infoSec {
+    /* text-align: center; */
+    display: none;
+    margin: 0 auto;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12pt;
+    font-weight: 300;
+    padding-top: 60px;
+    /* padding: 20px 26px; */
+  }
+
   .project-container {
     padding-top: 40px;
     padding-left: 0px !important;
@@ -596,7 +621,7 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
     list-style-type: none;
     display: inline-block;
     width: 100%;
-    height: 130px;
+    height: 150px;
   }
 
   .icons img {
@@ -660,6 +685,18 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
     width:200px;
     height: 200px;
     padding: 0;
+  }
+
+  .infoSec {
+    /* text-align: center; */
+    display: none;
+    margin: 0 auto;
+    color: #000;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12pt;
+    font-weight: 300;
+    padding-top: 50px;
+    /* padding: 20px 26px; */
   }
 
   .project-container {
@@ -731,6 +768,4 @@ body.no-touch .boxInner:hover .titleBox, body.touch .boxInner.touchFocus .titleB
     width: 400px;
     border-radius: 10px;
   }
-
-
 }
